test/libsolidity/syntaxTests/nameAndTypeResolution/563_event_without_emit_deprecated.sol
contract C {
    event e();
    function f() public {
        e();
    }
}
// ----
// TypeError: (62-65): Event invocations have to be prefixed by "emit".
